--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
 .App {
-  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+
+  font-size: 1.6rem;
+  height: 90vh;
+  background-color: azure;
+
+  padding: 0.5rem 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App .App__logo {
+  width: 4.5rem;
+  margin-right: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.App header {
+  background-color: black;
+  padding: 0 20px;
   color: white;
+  height: 50px;
+  margin-bottom: 40px;
+  align-items: center;
+  display: flex;
 }
 
-.App-link {
-  color: #61dafb;
+.App header a {
+  text-decoration: none;
+  background-color: rgb(0, 0, 105);
+
+  color: white;
+
+  padding: 7px;
+  margin: 0 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App header .active {
+  background-color: blue;
+}
+
+.App header a:hover {
+  background-color: rgb(51, 51, 255);
 }
