--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,28 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-html{
+html {
   font-size: 62.5%;
 }
 
 body {
   margin: 0;
   font-weight: 400;
-  font-family: 'Kaushan Script', cursive;
+  font-family: "Kaushan Script", cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.bg-card {
+  background: linear-gradient(180deg, #000000 0%, #3d3d3d 100%);
+  box-shadow: 2px 2px 10px #292929, -2px -2px 10px #1f1f1f;
+  border-radius: 10px;
 }
