--- a/src/components/Todo/todo.styles.scss
+++ b/src/components/Todo/todo.styles.scss
@@ -15,6 +15,8 @@
 
   &__title {
     margin: 0 5rem;
+    font-weight: 700;
+    font-size: 2.5rem;
   }
 
   &__controls {
@@ -22,6 +24,14 @@
     display: flex;
     justify-content: flex-end;
     margin: 0 3rem;
+
+    
+  }
+
+  &__icon{
+    height: 3.2rem;
+    width: 3.2rem;
+    align-self: center;
   }
 
   .color_blue{
@@ -54,6 +64,13 @@
     cursor: pointer;
     margin: 1rem;
     background-color: red;
+  }
+
+  @media (max-width: 768px) {
+    &__title{
+      font-weight: 400;
+      font-size: medium;
+    }
   }
 }
 
